# Uni-Lab-OS

./: .gitignore  3Duni-lab_plan.md  AGENTS.md  CLAUDE.md  LAYOUT_OPTIMIZER_INTEGRATION.md  MatterixGUIDE_DOCKER.md  MatterixGUIDE_UBUNTU_DIRECT.md  MatterixINSTALLATION_REASONING.md  MatterixREADME.md  MatterixREPRODUCTION_GUIDE.md  MatterixUNILAB_3D_ANALYSIS.md  MatterixUNILAB_CAD_IMPLEMENTATION.md  MatterixUNILAB_VISION.md  Matterix_Asset_Classification.md  MoveIt2-to-UniLab3D-Integration-Architecture.md  Phase1-Implementation-Guide-From-Current-Code.md  Phase1-Implementation-StepByStep-Playbook.md  Phase2-Existing-Code-Map.md  Phase2-Integration-Analysis.md  Ubuntu-DevEnv-Setup-Guide.md  Uni-Lab-3D-Phase1-Guide.md  Uni-Lab-3D-Phase2-Dev-Guide.md  Uni-Lab-3D-Phase2-Guide.md  Uni-Lab-3D-Plan-Final.md  Uni-Lab-OS-main.code-workspace  Uni-Lab_3D_Cloud_Lab_Doc_Improvement.md  Uni-Lab_3D_Cloud_Lab_Plan_v2.md  Uni-lab-os-3D-3.17new.md  joint_control_bridge.py  joint_control_bridge.py.bak  lab_with_arm.json  launch_moveit2.py  moveit2_integration_summary.md  setup.py  uni-lab-3D-phase2.md  unilab-3d-3.22.md  unilabos3Dnew.md
handover_layout_optimizer/: INTEGRATION_PLAN.md  PROJECT_HANDOVER.md  README.md  UBUNTU_SETUP_GUIDE.md  handover_layout_optimizer.code-workspace  lab_with_arm.json  patch_layout_routes.py  pyproject.toml
handover_layout_optimizer/layout_optimizer/: __init__.py  constraints.py  extract_footprints.py  footprints.json  intent_interpreter.py  models.py  (+5 more)
handover_layout_optimizer/layout_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+189 files in other folders)
